[package]
name = "ham-activity"
version = "0.1.0"
edition = "2024"

[dependencies]
dashmap = "6.1.0"
once_cell = "1.21.3"
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
ureq = "3"
anyhow = "1"
rstest = "0.26"
warp = { version = "0.4", features = ["server"] }
log = { version = "0.4", features = ["std"] }
env_logger = "0.11.8"
uom = { version = "0.37", features = ["si"] }

